# dhruva-bookMyShow

./: .gitignore  docker-compose.yml
product/: api_spec.md  arch.md  spec.md
server/: .dockerignore  .env  Dockerfile  pyproject.toml
server/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  security.py
server/routers/: __init__.py  auth.py  bookings.py  cities.py  movies.py  screens.py  search.py  shows.py  theater_memberships.py  theaters.py
server/tests/: test_auth.py  test_bookings.py  test_cities_search_misc.py  test_movies.py  test_screens.py  test_shows.py  test_theater_memberships.py  test_theaters.py
server/useage/: auth_service.py  booking_service.py  city_service.py  movie_service.py  screen_service.py  search_service.py  show_service.py
web/: .dockerignore  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
web/src/: App.css  App.tsx  index.css  store.tsx
web/src/Api/: BookingsAPI.tsx  CitiesAPI.tsx  LoginAPI.tsx  MoviesApi.tsx  RegisterAPI.tsx  ScreensAPI.tsx  SearchAPI.ts  ShowAPI.tsx  TheaterMembershipsAPI.tsx  TheatersAPI.tsx
web/src/UI/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx  Spinner.tsx  index.ts
web/src/components/: CitySelectorDialog.tsx  DateStrip.tsx  LandingPageMovieCard.tsx  TheaterShowsCard.tsx  UserMenu.tsx  header.tsx
web/src/layout/: MovieHero.tsx  landingMovieBanner.tsx
web/src/pages/: BookTicketsPage.tsx  BookingSummaryPage.tsx  LandingPage.tsx  LoginPage.tsx  MoviePage.tsx  ProfilePage.tsx  SamplePage.tsx  SeatsPage.tsx  SignupPage.tsx  TheaterManagementPage.tsx
