[project]
name = "bookmyshow-server"
version = "0.1.0"
description = "FastAPI backend for BookMyShow - Authentication & User Management"
requires-python = ">=3.10"
readme = "README.md"
authors = [
  { name = "Dhruva" }
]
license = { text = "MIT" }
dependencies = [
  "fastapi[standard]",
  "uvicorn[standard]",
  "SQLAlchemy>=2.0.30",
  "psycopg2-binary>=2.9.9",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "email-validator>=2.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0"
]

[tool.uv]
# You can configure uv settings here if needed (e.g., default-index-url)

[tool.pytest.ini_options]
# Explicitly set pytest-asyncio default fixture loop scope to avoid deprecation warnings
asyncio_default_fixture_loop_scope = "function"
